# scorch-discord

./: .gitignore  Build.py  CMakeLists.txt  README.md  load_env.sh  vcpkg.json
src/: Log.cpp  Log.hpp  main.cpp
src/Components/: Component.hpp  LogComponent.cpp  LogComponent.hpp  ServerStatusComponent.cpp  ServerStatusComponent.hpp  YippeeComponent.cpp  YippeeComponent.hpp
src/Components/Common/: Cache.hpp  StaticCache.hpp
src/Components/Log/: LogComponent.cpp  LogComponent.hpp  LogConfig.cpp  LogConfig.hpp
src/Components/ServerStatus/: Server.cpp  Server.hpp  ServerButton.cpp  ServerButton.hpp  ServerConfig.cpp  ServerConfig.hpp  ServerStatusComponent.cpp  ServerStatusComponent.hpp  StatusWidget.cpp  StatusWidget.hpp
src/Components/Yippee/: YippeeComponent.cpp
src/Database/: DatabaseManager.cpp  DatabaseManager.hpp  MongoDBManager.hpp
src/Database/MongoDB/: Document.cpp  Document.hpp  MongoDBManager.cpp  MongoDBManager.hpp
src/DiscordBot/: DiscordBot.cpp  DiscordBot.hpp
